--- a/default.hbs
+++ b/default.hbs
@@ -72,7 +72,7 @@
 
             </main>
 
-            <footer class="gh-foot gray-background">
+            <footer class="gh-foot">
                 <div class="gh-container">
                     <div class="gh-foot-menu">
                         {{navigation type="secondary"}}
