new contact form and more

--- a/home.hbs
+++ b/home.hbs
@@ -18,7 +18,7 @@
         </div>
     </div>
 
-    <div class="section gh-container">
+    <div id="game" class="section gh-container">
         <h2>The Rabbit Haul</h2>
         <p>Find out about our game</p>
         <div class="spacer-container">
@@ -37,7 +37,7 @@
             </article>
         </div>
     </div>
-    <div class="section gh-container">
+    <div id="blog" class="section gh-container">
             <h2>Blog</h2>
             <p>Read more about our journey</p>
         <div class="gh-postfeed">
@@ -53,7 +53,7 @@
             <button id="all_posts_button" class="gh-button gh-button-large">See all posts -></button>
         </div>
     </div>
-    <div class="section gh-container">
+    <div id="team" class="section gh-container">
         <h2>Our Team</h2>
         <div class="gh-team-container">
             <article class="gh-team-card">
@@ -72,5 +72,5 @@
                 <p class="gh-team-card-desc">Designer, Artist</p>
             </article>
         </div>
-    </div>
+    </div>  
 </div>
