--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -153,7 +153,7 @@ html,
 .gh-page-head {
     margin: 0 auto;
     padding: 8vmin 0 4vmin;
-    text-align: center;
+    /* text-align: center; */
 }
 
 .gh-page-image {
@@ -181,7 +181,7 @@ html,
 
 .gh-header {
     padding: 0 0 8vmin 0;
-    text-align: center;
+    /* text-align: center; */
 }
 
 .gh-post-meta {
@@ -201,6 +201,8 @@ html,
     grid-column: wide-start / wide-end;
     width: 100%;
     margin: 8vmin 0 0;
+    max-width: 720px;
+    justify-self: center;
 }
 
 .gh-feature-image img {
@@ -209,9 +211,12 @@ html,
 }
 
 .gh-post-footer {
-    margin: 2rem 0;
+    margin: 50px 0;
 }
 
+.gh-footer {
+    margin-top: 50px;
+}
 
 /* Author Archive
 /* ---------------------------------------------------------- */
@@ -307,7 +312,6 @@ html,
     margin: 0 auto;
     border: 1px solid var(--color-border);
     padding: 30px;
-    max-width: 1000px;
     justify-content: center;
     gap:24px;
     border-radius: var(--radius);
@@ -362,6 +366,44 @@ html,
     justify-self: start;
 }
 
+.gh-form-container {
+    margin: 50px auto;
+    color:inherit;
+    display:grid;
+    width:100%;
+    gap:24px;
+    max-width: 800px;
+    justify-self: center;
+}
+
+.text_input {
+    font-size: inherit;
+    padding: 12px 12px;
+    border-radius: var(--radius);
+    line-height: 24px;
+    border: 1px solid var(--color-border);
+    resize: none;
+}
+
+.send-button {
+    width: fit-content;
+}
+
+.other-page-heading {
+    margin-top: 50px;
+}
+
+.contact-blog-container {
+    margin: 50px 0;
+    display:grid;
+}
+
+.contact-image {
+    width:90%;
+    max-width: 600px;
+    justify-self: center;
+}
+
 @media (min-width: 640px) {
     .gh-team-container {
         grid-template-columns: 1fr 1fr 1fr;
@@ -382,7 +424,11 @@ html,
     }
 
     .grid-inner-container {
-    max-width: 450px;
+        max-width: 450px;
+    }
+
+    .grid-inner-container h2 {
+    font-size: 4.2rem;
 }
 
 }
