--- a/error.hbs
+++ b/error.hbs
@@ -38,7 +38,7 @@
             {{navigation}}
         </div>
         <div class="gh-head-actions">
-            <div class="gh-head-actions-list">
+            {{!-- <div class="gh-head-actions-list">
                 {{#if @site.facebook}}
                 <a href="{{facebook_url @site.facebook}}" title="Facebook" target="_blank" rel="noopener">{{> "icons/facebook"}}</a>
                 {{/if}}
@@ -46,7 +46,7 @@
                 <a href="{{twitter_url @site.twitter}}" title="Twitter" target="_blank" rel="noopener">{{> "icons/twitter"}}</a>
                 {{/if}}
                 <a href="https://feedly.com/i/subscription/feed/{{@site.url}}/rss/" title="RSS" target="_blank" rel="noopener">{{> "icons/rss"}}</a>
-            </div>
+            </div> --}}
         </div>
     </nav>
 </header>
