--- a/index.hbs
+++ b/index.hbs
@@ -1,22 +1,26 @@
 {{!< default}}
-<div class="gh-page">
-    <div class="gh-container">
+    <div class="gh-page">
+        <div class="gh-container">
+            <div class="other-page-heading">
+            <h1>Blog</h1>
+            <p>Find out about our journey</p>
 
-        <div class="gh-postfeed">
-   
-            {{#foreach posts}}
-
-                {{> "card" page=../pagination.page }} {{!-- partials/card.hbs --}}
-
-            {{/foreach}}
-      
-        </div>
-
-        {{!-- If JS isn't enabled, fallback to standard pagination --}}
-        <noscript>
-            <div class="gh-pagination">
-                {{pagination}}
             </div>
-        </noscript>
+            <div class="gh-postfeed">
+    
+                {{#foreach posts}}
+
+                    {{> "card" page=../pagination.page }} {{!-- partials/card.hbs --}}
+
+                {{/foreach}}
+        
+            </div>
+
+            {{!-- If JS isn't enabled, fallback to standard pagination --}}
+            <noscript>
+                <div class="gh-pagination">
+                    {{pagination}}
+                </div>
+            </noscript>
+        </div>
     </div>
-</div>
