--- a/index.hbs
+++ b/index.hbs
@@ -4,7 +4,13 @@
             <div class="other-page-heading">
             <h1>Blog</h1>
             <p>Find out about our journey</p>
-
+            </div>
+            <div class="blog-container">
+            <img
+                class="blog-image"
+                src="{{asset '/images/raccoon.png'}}"
+                alt="Image of a the raccoon character from the game The Rabbit Haul being attacked by a bee"
+            />
             </div>
             <div class="gh-postfeed">
     
