--- a/assets/css/ghost/members.css
+++ b/assets/css/ghost/members.css
@@ -4,7 +4,6 @@
 .gh-auth-form {
     width: 100%;
     max-width: 600px;
-    margin: 0 auto 10vmin;
     text-align: center;
 }
 
@@ -14,9 +13,10 @@
 }
 
 .gh-auth-form p {
-    margin: 10px 0 4vmin 0;
+    margin: 10px 0 30px 0;
     font-size: 1.7rem;
-    color: rgba(0,0,0,0.6)
+    color: inherit;
+    line-height: 3rem;
 }
 
 .gh-auth-form p small {
@@ -120,7 +120,7 @@ form[data-members-form].loading .gh-button-loader {
     display: inline-block;
     position: absolute;
     left: 50%;
-    bottom: -30%;
+    bottom: 5%;
     margin: 0 0 0 -19px;
     transform: scale(0.6);
 }
