--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -56,7 +56,7 @@ html,
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(min(350px, 100%), 1fr));
     gap: 4.8vmin 4vmin;
-    padding-top: 8vmin;
+    padding-top: 6vmin;
     padding-bottom: 50px;
 }
 
@@ -292,6 +292,7 @@ html,
     display: grid;
     gap: 24px;
     padding: 0 30px;
+    align-content: center;
 }
 
 .intro_text {
@@ -393,14 +394,42 @@ html,
     margin-top: 50px;
 }
 
-.contact-blog-container {
+.contact-container {
     margin: 50px 0;
     display:grid;
 }
 
+.blog-container {
+    margin: 30px;
+    display:grid;
+}
+
 .contact-image {
-    width:90%;
-    max-width: 600px;
+    max-width: 200px;
+    width:50%;
+    justify-self: center;
+}
+
+.subscribe-container {
+    margin: 50px 0;
+    display:grid;
+    place-items:center;
+    gap:30px;
+}
+
+.subscribe-image {
+    max-width: 200px;
+    width:50%;  
+    justify-self: center;
+}
+
+.subscribe-text {
+    font-size: 3rem;
+}
+
+.blog-image {
+    max-width: 200px;
+    width:50%;
     justify-self: center;
 }
 
