compressed team photos

--- a/home.hbs
+++ b/home.hbs
@@ -65,17 +65,17 @@
         <h2>Our Team</h2>
         <div class="gh-team-container">
             <article class="gh-team-card">
-                <img class="gh-team-card-image" src="{{asset "images/isael.png"}}" alt="Photo of Isael Huard">
+                <img class="gh-team-card-image" src="{{asset "images/isael.webp"}}" alt="Photo of Isael Huard">
                 <h3 class="gh-team-card-name">Isael Huard</h3>
                 <p class="gh-team-card-desc">Producer, Sound Designer</p>
             </article>
             <article class="gh-team-card">
-                <img class="gh-team-card-image" src="{{asset "images/mickael.png"}}" alt="Photo of Mickael Zerihoun">
+                <img class="gh-team-card-image" src="{{asset "images/mickael.webp"}}" alt="Photo of Mickael Zerihoun">
                 <h3 class="gh-team-card-name">Mickael Zerihoun</h3>
                 <p class="gh-team-card-desc">Programmer</p>
             </article>
             <article class="gh-team-card">
-                <img class="gh-team-card-image" src="{{asset "images/titus.png"}}" alt="Photo of Titus Lo">
+                <img class="gh-team-card-image" src="{{asset "images/titus.webp"}}" alt="Photo of Titus Lo">
                 <h3 class="gh-team-card-name">Titus Lo</h3>
                 <p class="gh-team-card-desc">Designer, Artist</p>
             </article>
