compressed all images to webp

--- a/contact.hbs
+++ b/contact.hbs
@@ -8,7 +8,7 @@
         <div class="contact-container">
             <img
                 class="contact-image"
-                src="{{asset '/images/beaver.png'}}"
+                src="{{asset '/images/beaver.webp'}}"
                 alt="Image of the beaver character in the game The Rabbit Haul"
             />
         </div>
