--- a/home.hbs
+++ b/home.hbs
@@ -1,5 +1,5 @@
 {{!< default}}
-<img class="gh-fullscreen-image" src="{{asset "/images/hero.jpg"}}" alt="Concept art for the game The Rabbit Haul">
+<img class="gh-fullscreen-image" src="{{asset "/images/hero.webp"}}" alt="Concept art for the game The Rabbit Haul">
 
 <div class="gh-page">
     <div class="section gh-container">
@@ -31,7 +31,7 @@
         <p>Find out about our game</p>
         <div class="spacer-container">
             <article class="gh-game-card-container">
-                <img class="gh-game-card-image" src="{{asset "images/concept.jpg"}}" alt="Concept art for the game The Rabbit Haul">
+                <img class="gh-game-card-image" src="{{asset "images/concept.webp"}}" alt="Concept art for the game The Rabbit Haul">
                 <p class="gh-game-card-desc">The Rabbit Haul is a single-player tower defence farming game with action-roguelite elements
                     where you play as
                     a
