--- a/members/signup.hbs
+++ b/members/signup.hbs
@@ -6,7 +6,7 @@
         </div>
 
         <div class="subscribe-container">
-            <img class="subscribe-image" src="{{asset "/images/rabbit.png"}}" alt="Image of the rabbit main character of the game The Rabbit Haul">
+            <img class="subscribe-image" src="{{asset "/images/rabbit.webp"}}" alt="Image of the rabbit main character of the game The Rabbit Haul">
 
         <form class="gh-auth-form" data-members-form="signup">
             <p>By subscribing, you can expect updates on our progress every month and get notified when play tests are happening. Unsubscribe anytime!</p>
