adding lazy loading

--- a/partials/card.hbs
+++ b/partials/card.hbs
@@ -31,7 +31,7 @@ Re-usable card for linking to posts
                 {{^if @first}}loading="lazy"{{/if}}
 
               >
-              <img
+              <img loading="lazy"
                 srcset="
                 {{img_url feature_image size="xxs"}} 30w,
                 {{img_url feature_image size="xs"}} 100w,
