--- a/home.hbs
+++ b/home.hbs
@@ -1,10 +1,10 @@
 {{!< default}}
-<img class="gh-fullscreen-image" src="{{asset "/images/hero.webp"}}" alt="Concept art for the game The Rabbit Haul">
+<img loading="lazy" class="gh-fullscreen-image" src="{{asset "/images/hero.webp"}}" alt="Concept art for the game The Rabbit Haul">
 
 <div class="gh-page">
     <div class="section gh-container">
         <div class="grid-container">
-            <img class="gh-team-photo" src="{{asset "images/team.webp"}}" alt="Photo of the Caldera Interactive team">
+            <img loading="lazy" class="gh-team-photo" src="{{asset "images/team.webp"}}" alt="Photo of the Caldera Interactive team">
             
             <div class="grid-inner-container">
                 <h2>Hello, it's nice to meet you!</h2>
@@ -31,7 +31,7 @@
         <p>Find out about our game</p>
         <div class="spacer-container">
             <article class="gh-game-card-container">
-                <img class="gh-game-card-image" src="{{asset "images/concept.webp"}}" alt="Concept art for the game The Rabbit Haul">
+                <img loading="lazy" class="gh-game-card-image" src="{{asset "images/concept.webp"}}" alt="Concept art for the game The Rabbit Haul">
                 <p class="gh-game-card-desc">The Rabbit Haul is a single-player tower defence farming game with action-roguelite elements
                     where you play as
                     a
@@ -65,17 +65,17 @@
         <h2>Our Team</h2>
         <div class="gh-team-container">
             <article class="gh-team-card">
-                <img class="gh-team-card-image" src="{{asset "images/isael.webp"}}" alt="Photo of Isael Huard">
+                <img loading="lazy" class="gh-team-card-image" src="{{asset "images/isael.webp"}}" alt="Photo of Isael Huard">
                 <h3 class="gh-team-card-name">Isael Huard</h3>
                 <p class="gh-team-card-desc">Producer, Sound Designer</p>
             </article>
             <article class="gh-team-card">
-                <img class="gh-team-card-image" src="{{asset "images/mickael.webp"}}" alt="Photo of Mickael Zerihoun">
+                <img loading="lazy" class="gh-team-card-image" src="{{asset "images/mickael.webp"}}" alt="Photo of Mickael Zerihoun">
                 <h3 class="gh-team-card-name">Mickael Zerihoun</h3>
                 <p class="gh-team-card-desc">Programmer</p>
             </article>
             <article class="gh-team-card">
-                <img class="gh-team-card-image" src="{{asset "images/titus.webp"}}" alt="Photo of Titus Lo">
+                <img loading="lazy" class="gh-team-card-image" src="{{asset "images/titus.webp"}}" alt="Photo of Titus Lo">
                 <h3 class="gh-team-card-name">Titus Lo</h3>
                 <p class="gh-team-card-desc">Designer, Artist</p>
             </article>
