removed lazy loading for some images

--- a/home.hbs
+++ b/home.hbs
@@ -1,10 +1,10 @@
 {{!< default}}
-<img loading="lazy" class="gh-fullscreen-image" src="{{asset "/images/hero.webp"}}" alt="Concept art for the game The Rabbit Haul">
+<img class="gh-fullscreen-image" src="{{asset "/images/hero.webp"}}" alt="Concept art for the game The Rabbit Haul">
 
 <div class="gh-page">
     <div class="section gh-container">
         <div class="grid-container">
-            <img loading="lazy" class="gh-team-photo" src="{{asset "images/team.webp"}}" alt="Photo of the Caldera Interactive team">
+            <img class="gh-team-photo" src="{{asset "images/team.webp"}}" alt="Photo of the Caldera Interactive team">
             
             <div class="grid-inner-container">
                 <h2>Hello, it's nice to meet you!</h2>
