using embed forms for signups

--- a/members/signup.hbs
+++ b/members/signup.hbs
@@ -7,9 +7,10 @@
 
         <div class="subscribe-container">
             <img class="subscribe-image" src="{{asset "/images/rabbit.webp"}}" alt="Image of the rabbit main character of the game The Rabbit Haul">
-
+            <p style="max-width:600; width: 100%; line-height: 3.5rem; text-align: center;">By subscribing, you can expect updates on our progress every month and get notified when play tests are happening. Unsubscribe anytime!</p>
+            <div style="max-width:600; width: 100%;"><script src="https://cdn.jsdelivr.net/ghost/signup-form@~0.1/umd/signup-form.min.js" data-button-color="#00b8f1" data-button-text-color="#FFFFFF" data-site="https://ghost.calderainteractive.com/" async></script></div>
+{{!-- 
         <form class="gh-auth-form" data-members-form="signup">
-            <p>By subscribing, you can expect updates on our progress every month and get notified when play tests are happening. Unsubscribe anytime!</p>
 
             <div class="gh-auth-box">
                 <input aria-label="Email Address" class="gh-input" data-members-email type="email"
@@ -20,6 +21,6 @@
                 </button>
             </div>
             <p data-members-error><!-- error message will appear here --></p>
-        </form>        
+        </form> --}}
     </div>
 </div>
