--- a/home.hbs
+++ b/home.hbs
@@ -11,17 +11,7 @@
                 <p class="intro_text">We are Caldera Interactive, an indie game studio that has ethical, sustainable, and non-exploitative game
                 development at
                 its core. Support us by signing up to our upcoming playtests!</p>
-            <form class="gh-auth-form" data-members-form="signup">
-                <div class="gh-auth-box">
-                    <input aria-label="Email Address" class="gh-input" data-members-email type="email"
-                        placeholder="Email" required="true" autocomplete="false" autofocus />
-                    <button class="gh-button gh-button-primary gh-button-large" type="submit">
-                        <span class="gh-button-content">Sign up</span>
-                        <span class="gh-button-loader">{{> "icons/loader"}}</span>
-                    </button>
-                </div>
-                <p data-members-error><!-- error message will appear here --></p>
-            </form>
+                <div style="width:100%;"><script src="https://cdn.jsdelivr.net/ghost/signup-form@~0.1/umd/signup-form.min.js" data-button-color="#00b8f1" data-button-text-color="#FFFFFF" data-site="https://ghost.calderainteractive.com/" async></script></div>
             </div>
         </div>
     </div>
