fix subscribe buttons

--- a/home.hbs
+++ b/home.hbs
@@ -11,7 +11,7 @@
                 <p class="intro_text">We are Caldera Interactive, an indie game studio that has ethical, sustainable, and non-exploitative game
                 development at
                 its core. Support us by signing up to our upcoming playtests!</p>
-                <div style="width:100%;"><script src="https://cdn.jsdelivr.net/ghost/signup-form@~0.1/umd/signup-form.min.js" data-button-color="#00b8f1" data-button-text-color="#FFFFFF" data-site="https://ghost.calderainteractive.com/" async></script></div>
+                <div style="width:100%;"><script src="https://cdn.jsdelivr.net/ghost/signup-form@~0.1/umd/signup-form.min.js" data-button-color="#00b8f1" data-button-text-color="#FFFFFF" data-site="https://calderainteractive.com/" async></script></div>
             </div>
         </div>
     </div>
