--- a/members/signup.hbs
+++ b/members/signup.hbs
@@ -8,6 +8,6 @@
         <div class="subscribe-container">
             <img class="subscribe-image" src="{{asset "/images/rabbit.webp"}}" alt="Image of the rabbit main character of the game The Rabbit Haul">
             <p style="max-width:600; width: 100%; line-height: 3.5rem; text-align: center;">By subscribing, you can expect updates on our progress every month and get notified when play tests are happening. Unsubscribe anytime!</p>
-            <div style="max-width:600; width: 100%;"><script src="https://cdn.jsdelivr.net/ghost/signup-form@~0.1/umd/signup-form.min.js" data-button-color="#00b8f1" data-button-text-color="#FFFFFF" data-site="https://ghost.calderainteractive.com/" async></script></div>
+            <div style="max-width:600; width: 100%;"><script src="https://cdn.jsdelivr.net/ghost/signup-form@~0.1/umd/signup-form.min.js" data-button-color="#00b8f1" data-button-text-color="#FFFFFF" data-site="https://calderainteractive.com/" async></script></div>
     </div>
 </div>
