--- a/contact.hbs
+++ b/contact.hbs
@@ -2,7 +2,7 @@
 <div class="gh-page">
     <div class="gh-container">
         <div class="other-page-heading">
-            <h1>Contact us</h1>
+            <h1>Contact Us</h1>
             <p>We're excited to meet you!</p>
         </div>
         <div class="contact-container">
