--- a/members/signup.hbs
+++ b/members/signup.hbs
@@ -1,7 +1,7 @@
 {{!< ../default}} <div class="gh-page">
     <div class="gh-container">
         <div class="other-page-heading">
-            <h1>Become a playtester</h1>
+            <h1>Become a Playtester</h1>
             <p>Help us develop our games</p>
         </div>
 
