--- a/page.hbs
+++ b/page.hbs
@@ -1,31 +1,27 @@
 {{!< default}}
+<div class="gh-page">
+        <div class="gh-container">
 
-{{#post}}
-<article class="gh-article {{post_class}}">
- {{#match @page.show_title_and_feature_image}}
-  //original header goes here    
-    <header class="gh-header gh-canvas">
-            <h1 class="gh-title">{{title}}</h1>
-
-            {{#if custom_excerpt}}
-                <p class="gh-excerpt">{{custom_excerpt}}</p>
-            {{/if}}
-
-            {{#if feature_image}}
-                <figure class="gh-feature-image">
-                    <img src="{{feature_image}}" alt="{{#if feature_image_alt}}{{feature_image_alt}}{{else}}{{title}}{{/if}}" />
-                    {{#if feature_image_caption}}
-                        <figcaption>{{feature_image_caption}}</figcaption>
+        {{#post}}
+        <article class="gh-article {{post_class}}">
+        {{#match @page.show_title_and_feature_image}}   
+            <div class="other-page-heading">
+                <h1>{{title}}</h1>
+            </div>
+            <header class="gh-header gh-canvas">
+                    {{#if feature_image}}
+                        <figure class="gh-feature-image">
+                            <img src="{{feature_image}}" alt="{{#if feature_image_alt}}{{feature_image_alt}}{{else}}{{title}}{{/if}}" />
+                        </figure>
                     {{/if}}
-                </figure>
-            {{/if}}
-        </header>
-{{/match}}
+            </header>
+        {{/match}}
+            <div class="gh-content gh-canvas">
+                {{content}}
+            </div>
 
+        </article>
+        {{/post}}
 
-    <div class="gh-content gh-canvas">
-        {{content}}
     </div>
-
-</article>
-{{/post}}
+</div>
