--- a/page.hbs
+++ b/page.hbs
@@ -5,7 +5,7 @@
         {{#post}}
         <article class="gh-article {{post_class}}">
         {{#match @page.show_title_and_feature_image}}   
-            <div class="other-page-heading">
+            <div>
                 <h1>{{title}}</h1>
             </div>
             <header class="gh-header gh-canvas">
