--- a/page.hbs
+++ b/page.hbs
@@ -3,9 +3,9 @@
         <div class="gh-container">
 
         {{#post}}
-        <article class="gh-article {{post_class}}">
+        <article class="{{post_class}}">
         {{#match @page.show_title_and_feature_image}}   
-            <div>
+            <div class="other-page-heading">
                 <h1>{{title}}</h1>
             </div>
             <header class="gh-header gh-canvas">
