--- a/page.hbs
+++ b/page.hbs
@@ -3,7 +3,7 @@
         <div class="gh-container">
 
         {{#post}}
-        <article class="{{post_class}}">
+        <article class="gh-article-page {{post_class}}">
         {{#match @page.show_title_and_feature_image}}   
             <div class="other-page-heading">
                 <h1>{{title}}</h1>
