updated tiktok link

--- a/default.hbs
+++ b/default.hbs
@@ -62,7 +62,7 @@
                     <div class="gh-foot-socials">
                         <a
                             target="_blank"
-                            href="https://www.tiktok.com/@calderainteractive"
+                            href="https://www.tiktok.com/@rabbithaulgame"
                         ><img
                                 class="social_icon"
                                 src="{{asset 'images/tiktok.svg'}}"
