--- a/default.hbs
+++ b/default.hbs
@@ -16,7 +16,9 @@
         />
         {{ghost_head}}
         {{! Outputs important meta data and settings, should always be in <head> }}
+        
 
+        </div>
     </head>
     <body class="{{body_class}}">
         <div class="gh-viewport">
@@ -45,7 +47,9 @@
                         {{navigation}}
                     </div>
                 </nav>
+                
             </header>
+            <div class="blue-bar"></div>
 
             <main class="gh-main">
 
