--- a/members/signup.hbs
+++ b/members/signup.hbs
@@ -1,13 +1,30 @@
-{{!< ../default}} <div class="gh-page">
-    <div class="gh-container">
-        <div class="other-page-heading">
-            <h1>Become a Playtester</h1>
-            <p>Help us develop our games</p>
-        </div>
+{{!< ../default}} 
 
-        <div class="subscribe-container">
-            <img class="subscribe-image" src="{{asset "/images/rabbit.webp"}}" alt="Image of the rabbit main character of the game The Rabbit Haul">
-            <p style="max-width:600; width: 100%; line-height: 3.5rem; text-align: center;">By subscribing, you can expect updates on our progress every month and get notified when play tests are happening. Unsubscribe anytime!</p>
-            <div style="max-width:600; width: 100%;"><script src="https://cdn.jsdelivr.net/ghost/signup-form@~0.1/umd/signup-form.min.js" data-button-color="#00b8f1" data-button-text-color="#FFFFFF" data-site="https://calderainteractive.com/" async></script></div>
+<div class="page-header">
+    <div class="page-header-container">
+        <h1 class="page-header-title"> Want to Test our Game?</h1>
+        <h3 class="page-header-subtitle">Next Playtest: <span class="page-header-playtest-date">February 9-11</span></h3>
     </div>
 </div>
+
+<div class="gh-page">
+    <div class="gh-container">
+        <div class="subscribe-section" >
+            <img class="subscribe-image" src="{{asset "images/panda.webp"}}" alt="">
+            <div class="subscribe-widget-container">
+                <div class="subscribe-widget-subheader">
+                    <h1>Become a Playtester</h1>
+                </div>
+                <p class="perks-list-header">Signing up has its perks ! 🎉</p>
+                <div class="perks-list">
+                    <p>🎮 Be the first to play our games</p>
+                    <p>🤩 Access an amazing, inclusive community</p>
+                    <p>✅ Vote on new features</p>
+                    <p>💬 Chat with the devs</p>
+                    <p>📣 Receive monthly newsletters</p>
+                </div>
+                <div class="subscribe-email-input"><script src="/signup-form.min.js" data-button-color="#00b8f1" data-button-text-color="#FFFFFF" data-site="https://calderainteractive.com/" async></script></div>
+                <p>By signing up, you agree to our <a href="#">terms</a>.</p>
+            </div>
+    </div>
+
