--- a/home.hbs
+++ b/home.hbs
@@ -9,8 +9,8 @@
             
             <div class="grid-inner-container">
                 <h2>Hello, it's nice to meet you!</h2>
-                <p class="intro_text">We are Caldera Interactive, an indie game studio from Edmonton, Canada that makes cozy and wholesome games. Support us by signing up to our upcoming playtests!</p>
-                <div style="width:100%;"><script src="https://cdn.jsdelivr.net/ghost/signup-form@~0.1/umd/signup-form.min.js" data-button-color="#00b8f1" data-button-text-color="#FFFFFF" data-site="https://calderainteractive.com/" async></script></div>
+                <p class="intro_text">We are Caldera Interactive, an indie game studio from Edmonton, Canada that makes cozy and wholesome games. Support us by signing up to our monthly playtests!</p>
+                <div style="width:100%;"><script src="/signup-form.min.js" data-button-color="#00b8f1" data-button-text-color="#FFFFFF" data-site="https://calderainteractive.com/" async></script></div>
             </div>
         </div>
     </div>
