--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -391,6 +391,19 @@ html,
     justify-self: center;
 }
 
+.gh-form-container {
+    margin: 0 auto;
+    margin-bottom: 60px;
+    display: grid;
+    gap:15px;
+    max-width: 800px;
+    
+}
+
+.send-button {
+    width:fit-content;
+}
+
 .page-header {
     min-height: 400px;
     background:linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8) ), url(../images/banner.webp);
