add welcome page

--- a/home.hbs
+++ b/home.hbs
@@ -10,7 +10,10 @@
             <div class="grid-inner-container">
                 <h2>Hello, it's nice to meet you!</h2>
                 <p class="intro_text">We are Caldera Interactive, an indie game studio from Edmonton, Canada that makes cozy and wholesome games. Support us by signing up to our monthly playtests!</p>
-                <div style="width:100%;"><script src="/signup-form.min.js" data-button-color="#00b8f1" data-button-text-color="#FFFFFF" data-site="https://calderainteractive.com/" async></script></div>
+                 <a id="signup-button-container"  href="/playtest">
+                    <button id="signup-button" class="gh-button gh-button-large gh-button-primary">Sign up           
+                </button>
+                 </a>
             </div>
         </div>
     </div>
@@ -29,8 +32,8 @@
                     Panda Posse. With an array of unique weapons, upgrade paths, powerful towers and crops to unlock, the game
                     offers
                     countless play styles to master.</p>
-                <button id="wishlist-button" class="gh-button gh-button-large gh-button-primary">Wishlist on Steam            
-                </button>
+                <a target="_blank" href="https://store.steampowered.com/app/2514330/The_Rabbit_Haul/"><button  class="gh-button gh-button-large gh-button-primary">Wishlist on Steam            
+                </button></a>
             </article>
         </div>
     </div>
@@ -47,7 +50,8 @@
         {{/get}}
         </div>
         <div class="gh-button-container">
-            <button id="all_posts_button" class="gh-button gh-button-large">See all posts -></button>
+            <a href="/blog"><button class="gh-button gh-button-large">See all posts -></button></a>
+            
         </div>
     </div>
     <div id="team" class="section gh-container">
