--- a/members/signup.hbs
+++ b/members/signup.hbs
@@ -1,30 +1,30 @@
 {{!< ../default}} 
 
-<div class="page-header">
-    <div class="page-header-container">
-        <h1 class="page-header-title"> Want to Test our Game?</h1>
-        <h3 class="page-header-subtitle">Next Playtest: <span class="page-header-playtest-date">February 9-11</span></h3>
+<div class="subscribe-page-header">
+    <div class="subscribe-page-header-container">
+        <h1 class="subscribe-page-header-title"> Want to Test our Game?</h1>
+        <h3 class="subscribe-page-header-subtitle">Next Playtest: <span class="subscribe-page-header-playtest-date">February 9-11</span></h3>
     </div>
 </div>
 
 <div class="gh-page">
     <div class="gh-container">
-        <div class="subscribe-section" >
-            <img class="subscribe-image" src="{{asset "images/panda.webp"}}" alt="">
-            <div class="subscribe-widget-container">
-                <div class="subscribe-widget-subheader">
+        <div class="subscribe-page-signup-section" >
+            <img class="subscribe-page-signup-image" src="{{asset "images/panda.webp"}}" alt="">
+            <div class="subscribe-page-signup-form-container">
+                <div class="subscribe-page-signup-form-title">
                     <h1>Become a Playtester</h1>
                 </div>
-                <p class="perks-list-header">Signing up has its perks ! 🎉</p>
-                <div class="perks-list">
+                <p class="subscribe-page-signup-form-subtitle">Signing up has its perks ! 🎉</p>
+                <div class="subscribe-page-signup-form-perks-perks-section">
                     <p>🎮 Be the first to play our games</p>
                     <p>🤩 Access an amazing, inclusive community</p>
                     <p>✅ Vote on new features</p>
                     <p>💬 Chat with the devs</p>
                     <p>📣 Receive monthly newsletters</p>
                 </div>
-                <div class="subscribe-email-input"><script src="/signup-form.min.js" data-button-color="#00b8f1" data-button-text-color="#FFFFFF" data-site="https://calderainteractive.com/" async></script></div>
-                <p>By signing up, you agree to our <a href="#">terms</a>.</p>
+                <div class="subscribe-page-signup-form-email-input"><script src="/signup-form.min.js" data-button-color="#00b8f1" data-button-text-color="#FFFFFF" data-site="https://calderainteractive.com/" async></script></div>
+                <p>By signing up, you agree to our <a href="https://docs.google.com/document/d/e/2PACX-1vR5S-t8pvE7FVnwCqL-Kcnosvdz8KbVBMAlM5NsGr45sEwJjfJIYrFrPlRErDRP_4PpprdofhL9V_v3/pub" target="_blank">terms</a>.</p>
             </div>
     </div>
 
