--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -270,6 +270,13 @@ html,
 
 /* CUSTOM STYLES */
 
+.blue-bar {
+    width:100%;
+    min-height: 2vh;
+    background-color: var(--color-primary);;
+}
+
+/* Home page full width image */
 .gh-fullscreen-image {
     width:100%;
 }
@@ -303,9 +310,15 @@ html,
     line-height: 2.8rem;
 }
 
-#subscribe_component {
-    width:90%;
+#signup-button-container{
+    display: grid;
+    place-items: center;
 }
+
+/* Make sign up button on home page take the full width of the container (Stylistic choice */
+/* #signup-button {
+    width: 100%;
+} */
 
 .spacer-container {
     margin: 6vmin 0;
@@ -327,6 +340,7 @@ html,
     padding: 0 10px;
 }
 
+/* Home page wishlist button */
 #wishlist-button {
     width: min-content;
 }
@@ -375,22 +389,19 @@ html,
     margin-top: 60px;
 }
 
-.contact-container {
-    margin: 50px 0;
-    display:grid;
-}
-
-.blog-container {
-    margin: 30px;
-    display:grid;
-}
-
+/* Contact page */
 .contact-image {
     max-width: 200px;
     width:50%;
     justify-self: center;
 }
 
+.contact-container {
+    margin: 50px 0;
+    display:grid;
+}
+
+/* Contact form container */
 .gh-form-container {
     margin: 0 auto;
     margin-bottom: 60px;
@@ -399,19 +410,32 @@ html,
     max-width: 800px;
     
 }
-
+/* Contact form send button */
 .send-button {
     width:fit-content;
 }
+/* Blog page */
 
-.page-header {
+.blog-container {
+    margin: 30px;
+    display:grid;
+}
+
+.blog-image {
+    max-width: 200px;
+    width:50%;
+    justify-self: center;
+}
+
+/* Subscribe page styles */
+.subscribe-page-header {
     min-height: 400px;
     background:linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8) ), url(../images/banner.webp);
     background-position: 50% 50%;
     background-size: 2560px;
 }
 
-.page-header-container {
+.subscribe-page-header-container {
     color:#ffffff;
     display: grid;
     margin-top: 135px;
@@ -421,55 +445,31 @@ html,
     padding: 0 24px;
 }
 
-.page-header-title {
+.subscribe-page-header-title {
     text-align: center;
     font-weight: 900;
     letter-spacing: 1.4px;
     align-self: end;
 }
 
-.page-header-subtitle {
+.subscribe-page-header-subtitle {
     text-align: center;
     color:#bababa;
     letter-spacing: 1.4px;
     font-weight: 800;
 }
 
-.page-header-playtest-date {
+.subscribe-page-header-playtest-date {
     color: var(--color-primary);
 }
 
-.subscribe-section {
+.subscribe-page-signup-section {
     margin: 60px 0;
     display:grid;
     gap: 60px;
 }
 
-.subscribe-widget-container {
-    display:grid;
-    row-gap: 20px;
-    max-width: 800px;
-}
-
-.perks-section {
-    display:grid;
-    row-gap:15px;
-}
-
-.perks-list-header {
-    font-weight: 400;
-}
-.perks-list {
-    display: grid;
-    row-gap:10px;
-    align-items: center;
-}
-
-.subscribe-widget-subheader {
-    display: grid;
-}
-
-.subscribe-image {
+.subscribe-page-signup-image {
     order:1;
     max-width: 500px;
     min-width: 200px;
@@ -477,21 +477,103 @@ html,
     place-self: center;
 }
 
-.subscribe-email-input {
+.subscribe-page-signup-form-container {
+    display:grid;
+    row-gap: 20px;
+    max-width: 800px;
+}
+
+.subscribe-page-signup-form-title {
+    display: grid;
+}
+
+.subscribe-page-signup-form-subtitle {
+    font-weight: 400;
+}
+
+.subscribe-page-signup-form-perks-perks-section {
+    display: grid;
+    row-gap:10px;
+    align-items: center;
+}
+
+.subscribe-page-signup-form-email-input {
     margin: 20px 0;
     width: 100%;
 }
 
-.blog-image {
-    max-width: 200px;
-    width:50%;
-    justify-self: center;
+/* Welcome Page Styles */
+.welcome-page-header {
+    min-height: 350px;
+    background-color: var(--color-primary);
 }
 
-.blue-bar {
-    width:100%;
-    min-height: 2vh;
-    background-color: var(--color-primary);;
+.welcome-page-header-container {
+    color:#ffffff;
+    display: grid;
+    gap:30px;
+    margin-top: 100px;
+    justify-items: center;
+    place-items: center;
+    padding: 0 24px;
+}
+
+.welcome-page-header-title {
+    text-align: center;
+    font-weight: 900;
+    letter-spacing: 1.4px;
+    align-self: end;
+}
+
+.welcome-page-header-subtitle {
+    letter-spacing: 1.4px;
+    font-weight: 500;
+    text-align: center;
+}
+
+.welcome-page-container {
+    margin: 60px auto;
+    display: grid;
+    max-width: 800px;
+    gap:60px;
+}
+
+.welcome-page-membership-section-container {
+    display:grid;
+    gap:20px;
+}
+
+.welcome-page-membership-section-list {
+    font-size: 1.7rem;
+    list-style:none;
+    display: grid;
+    gap: 15px;
+    margin-left: 5px;
+}
+
+.welcome-page-playtest-section-container {
+    display:grid;
+    gap:20px;
+}
+
+.welcome-page-playtest-section-list {
+    font-size: 1.7rem;
+    list-style:none;
+    display: grid;
+    gap: 15px;
+    margin-left: 5px;
+}
+
+.welcome-page-discord-section-container {
+    display: grid;
+    place-items: center;
+    text-align: center;
+    gap:10px;
+}
+
+.welcome-page-discord-section-text {
+    max-width: 250px;
+    font-size: 1.5rem;
 }
 
 @media (min-width: 640px) {
@@ -503,30 +585,21 @@ html,
     }
 }
 
-@media (min-width: 910px) {
-
-    .subscribe-widget-container {
-    margin-left: none;
-}
-
-    .subscribe-section {
-        grid-template-columns: 0.9fr 1.1fr;
-        max-width: auto;
-        justify-self: auto;
-    }    
-
-    .subscribe-image {
-        order:-1;
-    }
-}
-
 @media (min-width: 900px) {
-
-    .page-header-title {
+    .welcome-page-header-title {
         font-size: 6rem;
     }
 
-    .page-header-subtitle {
+    .welcome-page-header-subtitle {
+        font-size: 3rem;
+    }
+
+    .subscribe-page-header-title {
+        font-size: 6rem;
+        text-align: center;
+    }
+
+    .subscribe-page-header-subtitle {
         font-size: 3rem;
     }
 
@@ -546,6 +619,22 @@ html,
     font-size: 4.2rem;
 }
 
+}
+@media (min-width: 910px) {
+
+    .subscribe-page-signup-form-container {
+    margin-left: none;
+}
+
+    .subscribe-page-signup-section {
+        grid-template-columns: 0.9fr 1.1fr;
+        max-width: auto;
+        justify-self: auto;
+    }    
+
+    .subscribe-page-signup-image {
+        order:-1;
+    }
 }
 
 @media (min-width: 1024px) {
