--- a/members/welcome.hbs
+++ b/members/welcome.hbs
@@ -1,13 +1,52 @@
-{{!< ../default}} <div class="gh-page">
+{{!< ../default}}
+<div class="welcome-page-header">
+    <div class="welcome-page-header-container">
+        <h1 class="welcome-page-header-title"> WELCOME! 👋</h1>
+        <h3 class="welcome-page-header-subtitle">Thanks for signing up</h3>
+    </div>
+</div>
+<div class="gh-page">
     <div class="gh-container">
-        <div class="other-page-heading">
-            <h1>Welcome to our Community!</h1>
-            <p>Come Join Us on Discord Now!</p>
-        </div>
+        <div class="welcome-page-container">
 
-        <div class="subscribe-container">
-            <img class="subscribe-image" src="{{asset "/images/rabbit.webp"}}" alt="Image of the rabbit main character of the game The Rabbit Haul">
-            <p style="max-width:600; width: 100%; line-height: 3.5rem; text-align: center;">By subscribing, you can expect updates on our progress every month and get notified when play tests are happening. Unsubscribe anytime!</p>
-            <div style="max-width:600; width: 100%;"><script src="https://cdn.jsdelivr.net/ghost/signup-form@~0.1/umd/signup-form.min.js" data-button-color="#00b8f1" data-button-text-color="#FFFFFF" data-site="https://calderainteractive.com/" async></script></div>
+            <div class="welcome-page-membership-section-container">
+                <h4 class="welcome-page-membership-section-title">You’re in! You
+                    now have access to:
+                </h4>
+                <ul class="welcome-page-membership-section-list">
+                    <li>👉 Monthly email updates about our latest projects</li>
+                    <li>👉 Invitations to alpha and beta tests of our games</li>
+                    <li>👉 Our community Discord — access below 👇 </li>
+                </ul>
+            </div>
+
+            <div class="welcome-page-playtest-section-container">
+                <h4 class="welcome-page-playtest-section-title">Private
+                    Playtests
+                </h4>
+                <ul class="welcome-page-playtest-section-list">
+                    <li>👉 Our next playtest is on
+                        <strong>February 9-11, 2024.</strong></li>
+                    <li>👉 By joining our discord, you may be chosen as one of
+                        the first 100 people to playtest our game!</li>
+                    <li>👉 Even if you’re not chosen this month, we will be
+                        continuing these tests regularly, and you will be
+                        helping shape The Rabbit Haul in its final production.</li>
+                </ul>
+            </div>
+
+            <div class="welcome-page-discord-section-container">
+                <a href="https://discord.gg/SbDnUZsdJj" target="_blank"><img
+                        src="{{asset 'images/discord.webp'}}"
+                        alt=""
+                    /></a>
+                <p class="welcome-page-discord-section-text">By signing up, you
+                    agree to our
+                    <a
+                        href="https://docs.google.com/document/d/e/2PACX-1vR5S-t8pvE7FVnwCqL-Kcnosvdz8KbVBMAlM5NsGr45sEwJjfJIYrFrPlRErDRP_4PpprdofhL9V_v3/pub"
+                        target="_blank"
+                    >terms</a>.</p>
+            </div>
+        </div>
     </div>
 </div>
